Uretim ikinci kalitelerden cari kod alanı kaldırıldı.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -4682,8 +4682,8 @@ Seçili makinede iş emri yok.
                 if (m <= max) {
                     keychangeikinci1();
                 } else {
-                    $("#miktar11").val("").trigger('keyup');
                     $('#BirimMik2').html('-');
+                    $("#ikincimik2").val('').trigger('keyup')
                     $("#ikincimik2").prop('disabled', true);
                     Swal.fire({
                         title:'Dikkat!',
