--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Barkod_Modal.cshtml
@@ -110,15 +110,17 @@
 <script>
     var Scanner;
 
-    function BarkodModal() {
+    $(document).ready(() => {
         Scanner = new Instascan.Scanner({ video: document.getElementById('qr-scanner'), mirror: false, refractoryPeriod: 2000 });
-
-        document.getElementsByClassName('qr-scanner-area')[0].style.display = "block";
-        SetFullscreen(document.getElementsByClassName('qr-scanner-area')[0]);
 
         Scanner.addListener('scan', function (content) {
             BarkodKontrol(content);
         });
+    });
+
+    function BarkodModal() {
+        document.getElementsByClassName('qr-scanner-area')[0].style.display = "block";
+        SetFullscreen(document.getElementsByClassName('qr-scanner-area')[0]);
 
         let Cameras = [];
 
@@ -149,7 +151,17 @@
 
             })
             .catch((e) => {
-                console.error(e)
+                Swal.fire({
+                    text: "Kamera başlatılırken bir sorun oluştu.",
+                    icon: "error",
+                    showConfirmButton: false,
+                    timer: '1500',
+                    target: document.getElementsByClassName("qr-controls")[0],
+                });
+
+                setTimeout(() => {
+                    Close();
+                }, 1500);
             });
     }
 
@@ -160,7 +172,6 @@
             Scanner
                 .stop()
                 .then(() => {
-                    Scanner = null;
                     document.exitFullscreen();
                     $('.qr-scanner-loader').fadeIn().css('display', 'flex');
                 });
@@ -178,7 +189,6 @@
                 Scanner
                     .stop()
                     .then(() => {
-                        Scanner = null;
                         document.exitFullscreen();
                         $('.qr-scanner-loader').fadeIn().css('display', 'flex');
                     });
